# packed-seq

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile  release.toml
.github/workflows/: rust.yml
benches/: bench.rs  bench_gg.rs  bench_iai.rs
src/: ascii.rs  ascii_seq.rs  lib.rs  packed_ef_n_seq.rs  packed_n_seq.rs  packed_seq.rs  padded_it.rs  simd_types.rs  test.rs  traits.rs
src/intrinsics/: deinterleave.rs  gather.rs  mod.rs  transpose.rs
