[package]
name = "packed-seq"
version = "4.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rust-seq/packed-seq"
keywords = ["packed", "simd", "dna", "bioinformatics"]
categories = ["compression", "data-structures", "science::bioinformatics"]
authors = ["Ragnar Groot Koerkamp", "Igor Martayan"]
description = "Constructing and iterating packed DNA sequences using SIMD"

[dependencies]
wide = "0.7"
mem_dbg = "0.3"
cfg-if = "1.0"
ensure_simd = "0.1.0"

# Optional generate random sequences for testing. (Default enabled.)
rand = { version = "0.9", features = ["small_rng"], optional = true }

# Optional (de)serialization using epserde.
epserde = { version = "0.8", optional = true }

# Optional pyclass atrributes for some objects.
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }
sux = "0.10.2"
# Optional, for reading PackedSeq[N]Vec directly from a file
needletail = { version = "0.6.3", optional = true }

[features]
# Also needed for tests.
default = ["rand", "file_io"]

# Enables functions to read PackedNSeq directly from a file.
file_io = ["needletail"]

# Hides the `simd` warnings when neither AVX2 nor NEON is detected.
scalar = ["ensure_simd/scalar"]

