[package]
name = "packed-seq"
version = "4.4.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/rust-seq/packed-seq"
keywords = ["packed", "simd", "dna", "bioinformatics"]
categories = ["compression", "data-structures", "science::bioinformatics"]
authors = ["Ragnar Groot Koerkamp", "Igor Martayan"]
description = "Constructing and iterating packed DNA sequences using SIMD"

[dependencies]
wide = "1.5"
mem_dbg = "0.4"
cfg-if = "1.0"
ensure_simd = "0.1.0"

# Optional generate random sequences for testing. (Default enabled.)
rand = { version = "0.10", optional = true }
# Optional (de)serialization using epserde.
epserde = { version = "0.12", optional = true }
# Optional pyclass atrributes for some objects.
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }
# Optional, for PackedEfNSeqVec
sux = { version = "0.14", optional = true }
# Optional, for reading PackedSeq[N]Vec directly from a file
needletail = { version = "0.7", optional = true }

[features]
# Also needed for tests.
default = ["rand"]

# Enables functions to read PackedNSeq directly from a file.
file_io = ["needletail"]

# Enables PackedEfNSeq
ef_seq = ["sux"]

# Enables (de)serialization using epserde. Also activates sux's epserde support when ef_seq is enabled.
epserde = ["dep:epserde", "sux?/epserde"]

# Hides the `simd` warnings when neither AVX2 nor NEON is detected.
scalar = ["ensure_simd/scalar"]


[package.metadata.docs.rs]
# Features to pass to Cargo
features = ['rand', 'file_io', 'ef_seq']
